# RubikBench

./: .gitignore  LICENSE  README.en.md  README.md  README.zh.md  demo.py  pyproject.toml  requirements.txt
data/RubikBench/knowledge/: README.md  synonyms.yml
data/RubikBench/knowledge/oracles/: 3QRA.txt  APEX.txt  Arab.txt  BCR.txt  BRICS.txt  Breakdown.txt  Budget-Forecast.txt  CAGR.txt  China-Coastal.txt  Commonwealth.txt  Double-Factor.txt  East-Asia.txt  Europe.txt  Forecast-Accuracy.txt  G20.txt  G7.txt  HHI.txt  Half-year.txt  Income.txt  Inflection.txt  Period.txt  Profit.txt  Quarter.txt  ROI.txt  Star.txt  US-West-Coast.txt  Volatility.txt  decline.txt
data/RubikBench/queries/: query_tags.yaml
src/rubikbench/: __init__.py  cli.py  dialect.py  evaluate.py  queries.py
src/rubikbench/benchmarks/: __init__.py  _verify.py  birdsql.py  kaggledbqa.py  rubikbench.py
src/rubikbench/metrics/: __init__.py  bf_score.py  ex_score.py  sf_score.py  utils.py
submissions/: birdsql.json  birdsql_template.json  kaggledbqa.json  sample.json  template.json
