[project]
name = "rubikbench"
dynamic = ["version", "dependencies"]
authors = [
    { name="RubikSQL Team", email="chenzui1@huawei.com" },
]
description = "RubikBench: An Enterprise NL2SQL Benchmark for Testing the Research-to-Production Gap of NL2SQL Systems"
readme = { file = "README.en.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.14"
keywords = ["rubik", "rubikbench", "nl2sql", "database"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RubikSQL/RubikBench"
Documentation = "https://github.com/RubikSQL/RubikBench"
Repository = "https://github.com/RubikSQL/RubikBench"
"Bug Tracker" = "https://github.com/RubikSQL/RubikBench/issues"
"HuggingFace Dataset" = "https://huggingface.co/datasets/Magolor/RubikBench"

[build-system]
requires = [ "setuptools>=62.6", "wheel" ]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "rubikbench.__init__.__version__"}
dependencies = { file = ["requirements.txt"] }

[tool.black]
line-length = 160

[project.scripts]
rubikbench = "rubikbench.cli:cli"
